# ansible-role-test

./: .gitignore  .pre-commit-config.yaml  .travis.build.yml  .yamllint.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.yml  tasks.yml
.github/workflows/: molecule.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/kvm/: molecule.yml
molecule/podman/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
molecule/resources/tests/: test_default.py
molecule/tox/: molecule.yml
molecule/vbox/: molecule.yml
tasks/: main.yml
templates/: template.conf.j2.j2
vars/: Alpine.yml  Archlinux.yml  Debian.yml  RedHat.yml  Suse.yml
